--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
-    "ng2-archwizard": "file:///home/marc/git/ng2-wizard",
+    "ng2-archwizard": "^1.1.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
