--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
-    "ng2-archwizard": "^1.3.1",
+    "font-awesome": "^4.7.0",
+    "ng2-archwizard": "1.4.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
