--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng2-archwizard": "^1.7.0",
     "ngx-bootstrap": "^1.7.0",
     "rxjs": "^5.1.0",
+    "tether": "^1.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
