--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-archwizard-demo",
+  "name": "angular-archwizard-demo",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -25,7 +25,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "ng2-archwizard": "../ng2-archwizard/dist",
+    "angular-archwizard": "^3.0.0",
     "rxjs": "^5.5.7",
     "tether": "^1.4.0",
     "zone.js": "^0.8.4"
