--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "angular-archwizard": "^3.0.0",
+    "angular-archwizard": "../../Projects/angular-archwizard/dist",
     "rxjs": "^5.5.7",
     "tether": "^1.4.0",
     "zone.js": "^0.8.4"
