--- a/package.json
+++ b/package.json
@@ -12,28 +12,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
+    "@angular/animations": "^6.1.9",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
+    "@angular/forms": "^6.1.9",
+    "@angular/http": "^6.1.9",
+    "@angular/platform-browser": "^6.1.9",
+    "@angular/platform-browser-dynamic": "^6.1.9",
+    "@angular/router": "^6.1.9",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "angular-archwizard": "^3.0.0",
-    "rxjs": "^5.5.7",
+    "angular-archwizard": "^4.0.0",
+    "rxjs": "^6.3.3",
     "tether": "^1.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "^6.2.3",
+    "@angular/compiler-cli": "^6.1.9",
+    "@angular/language-service": "^6.1.9",
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.4.7",
     "codelyzer": "^4.2.1",
@@ -48,6 +49,6 @@
     "protractor": "^5.3.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
-    "typescript": "2.6.2"
+    "typescript": "2.9.2"
   }
 }
