--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ addons:
 before_install:
 - ARCHWIZARD_VERSION=$(grep '"angular-archwizard":' package.json | cut -d '"' -f4 | tr -d '[[:space:]]')
 - if [[ "$ARCHWIZARD_VERSION" == *develop ]]; then
-     ARCHWIZARD_LOCATION=$TRAVIS_BUILD_DIR/../angular-archwizard
-     git clone https://github.com/madoar/angular-archwizard.git $ARCHWIZARD_LOCATION
-     cd $ARCHWIZARD_LOCATION
-     npm run build
-     cd $TRAVIS_BUILD_DIR
-     npm link $ARCHWIZARD_LOCATION/dist
+     ARCHWIZARD_LOCATION=$TRAVIS_BUILD_DIR/../angular-archwizard;
+     git clone https://github.com/madoar/angular-archwizard.git $ARCHWIZARD_LOCATION;
+     cd $ARCHWIZARD_LOCATION;
+     npm run build;
+     cd $TRAVIS_BUILD_DIR;
+     npm link $ARCHWIZARD_LOCATION/dist;
   fi
