--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
      ARCHWIZARD_LOCATION=$TRAVIS_BUILD_DIR/../angular-archwizard;
      git clone https://github.com/madoar/angular-archwizard.git $ARCHWIZARD_LOCATION;
      cd $ARCHWIZARD_LOCATION;
+     npm install;
      npm run build;
      cd $TRAVIS_BUILD_DIR;
      npm link $ARCHWIZARD_LOCATION/dist;
