--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ before_install:
      npm install;
      npm run build;
      cd $TRAVIS_BUILD_DIR;
-     npm link $ARCHWIZARD_LOCATION/dist;
+     npm install --save $ARCHWIZARD_LOCATION/dist;
   fi
