--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,7 @@ branches:
   - master
   - develop
 
+# ensure the correct version of angular-archwizard is installed
+# this version depends on the one specified in package.json
 before_install:
-- ARCHWIZARD_VERSION=$(grep '"angular-archwizard":' package.json | cut -d '"' -f4 | tr -d '[[:space:]]')
-- if [[ "$ARCHWIZARD_VERSION" == *develop ]]; then
-     ARCHWIZARD_LOCATION=$TRAVIS_BUILD_DIR/../angular-archwizard;
-     git clone https://github.com/madoar/angular-archwizard.git $ARCHWIZARD_LOCATION;
-     cd $ARCHWIZARD_LOCATION;
-     npm install;
-     npm run build;
-     cd $TRAVIS_BUILD_DIR;
-     npm install --save $ARCHWIZARD_LOCATION/dist;
-  fi
+- bash $TRAVIS_BUILD_DIR/scripts/install-angular-archwizard.sh
