Demonstrate how to define custom CSS styles to make optional steps in the wizard on the 'Free navigation mode' demo page look like default steps, in order to replicate the behavior of the old `FreeNavigationMode` exactly.
Unfortunately, the process of CSS customization is far from present.

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "styles": [
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -84,7 +84,7 @@
             "styles": [
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "assets": [
               "src/assets",
