--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "protractor": "^5.3.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
-    "typescript": "3.7.5"
+    "typescript": "~3.7.5"
   }
 }
