--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-detect-browsers": "^2.3.3",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^1.0.0",
+    "karma-safari-launcher": "^1.0.0",
     "protractor": "^5.3.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
