--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@angular/platform-browser": "~9.0.4",
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "~9.0.4",
-    "bootstrap": "^4.0.0-alpha.6",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
+    "@popperjs/core": "^2.0.6",
     "angular-archwizard": "~6.0.0-develop",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "rxjs": "~6.5.4",
-    "tether": "^1.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
