--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
     "@popperjs/core": "^2.0.6",
-    "angular-archwizard": "~6.0.0",
-    "bootstrap": "^4.3.1",
+    "angular-archwizard": "../angular-archwizard/dist",
+    "bootstrap": "~4.3.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
+    "jquery": "~3.4.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
