ci: fix build configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,15 @@ jobs:
     # Tests
     - stage: Test
       os: linux
-      dist: trusty
       node_js: "10"
     - stage: Test
       os: linux
-      dist: trusty
       node_js: "12"
     - stage: Test
       os: linux
-      dist: trusty
+      node_js: "14"      
+    - stage: Test
+      os: linux
       node_js: "node"
     - stage: Test
       os: osx
@@ -35,13 +35,16 @@ jobs:
     - stage: Test
       os: osx
       node_js: "12"
+    - stage: Test
+      os: osx
+      node_js: "14"      
     - stage: Test
       os: osx
       node_js: "node"
     # Build
     - stage: Build
       os: linux
-      node_js: "12"
+      node_js: "14"
       addons:
         chrome: stable
       script: npm run build
