--- a/package.json
+++ b/package.json
@@ -12,45 +12,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.4",
-    "@angular/common": "~9.1.4",
-    "@angular/compiler": "~9.1.4",
-    "@angular/core": "~9.1.4",
-    "@angular/forms": "~9.1.4",
-    "@angular/platform-browser": "~9.1.4",
-    "@angular/platform-browser-dynamic": "~9.1.4",
-    "@angular/router": "~9.1.4",
-    "@popperjs/core": "^2.0.6",
+    "@angular/animations": "~10.2.2",
+    "@angular/common": "~10.2.2",
+    "@angular/compiler": "~10.2.2",
+    "@angular/core": "~10.2.2",
+    "@angular/forms": "~10.2.2",
+    "@angular/platform-browser": "~10.2.2",
+    "@angular/platform-browser-dynamic": "~10.2.2",
+    "@angular/router": "~10.2.2",
+    "@popperjs/core": "^2.5.4",
     "angular-archwizard": "~7.0.0-develop",
-    "bootstrap": "~4.3.1",
+    "bootstrap": "~4.5.3",
     "font-awesome": "^4.7.0",
-    "jquery": "~3.4.1",
+    "jquery": "~3.5.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.4",
-    "@angular/cli": "~9.1.4",
-    "@angular/compiler-cli": "~9.1.4",
-    "@angular/language-service": "~9.1.4",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "~0.1002.0",
+    "@angular/cli": "~10.2.0",
+    "@angular/compiler-cli": "~10.2.2",
+    "@angular/language-service": "~10.2.2",
+    "@types/jasmine": "~3.6.1",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^14.14.6",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.0.4",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-detect-browsers": "^2.3.3",
-    "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-firefox-launcher": "^2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "karma-safari-launcher": "^1.0.0",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.10.1",
-    "tslint": "~5.18.0",
-    "typescript": "~3.8.3"
+    "protractor": "~7.0.0",
+    "ts-node": "~9.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.5"
   }
 }
