--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-archwizard-demo",
-  "version": "7.0.0",
+  "version": "8.0.0-develop",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "@popperjs/core": "^2.5.4",
-    "angular-archwizard": "~7.0.0",
+    "angular-archwizard": "~8.0.0-develop",
     "bootstrap": "~4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "~3.5.1",
